[package]
name = "rust-with-wasm"
version = "0.1.0"
authors = ["Adam Rolczyk <adamrolczyk@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
opensimplex_noise_rs = "0.3.0"
wasm-bindgen = "0.2.63"
js-sys = "0.3.56"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
